Quick fix for chrome
image overflowed div on chrome

--- a/src/styles/components/sidebar/_chat-menu.scss
+++ b/src/styles/components/sidebar/_chat-menu.scss
@@ -11,6 +11,10 @@
   text-align: center;
   font-size: 0.7em;
   position: relative;
+  img {
+    max-height: 100%;
+    max-width: 100%;
+  }
   .notification {
     @include flexrow;
     justify-content: center;
@@ -111,6 +115,6 @@
     background-color: $brand-blue-3;
     i {
       color: $brand-blue-6;
-    } 
+    }
   }
 }
